[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/brasilmap.png" type="Texture" id=1]
[ext_resource path="res://scripts/menu/main_interface.gd" type="Script" id=2]
[ext_resource path="res://sprites/sprite_mapa_1.png" type="Texture" id=3]
[ext_resource path="res://sprites/sprite_mapa_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/retrun_button.png" type="Texture" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Mapa"
length = 1.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ ExtResource( 3 ), ExtResource( 4 ) ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 180.5, 322 )
scale = Vector2( 0.168056, 0.166146 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
anims/Mapa = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 369.0
margin_bottom = 637.0
color = Color( 0.0509804, 0.694118, 0.976471, 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 178.175, 290.238 )
scale = Vector2( 0.819133, 1.12582 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 0.11
margin_left = 208.0
margin_top = 326.0
margin_right = 253.0
margin_bottom = 373.0
rect_pivot_offset = Vector2( 100, 0 )
custom_styles/normal = SubResource( 1 )
text = "1"

[node name="Button2" type="Button" parent="."]
anchor_right = 0.11
margin_left = 267.0
margin_top = 211.0
margin_right = 315.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 100, 0 )
custom_styles/normal = SubResource( 1 )
text = "2"

[node name="Button3" type="Button" parent="."]
anchor_right = 0.119
margin_left = 123.0
margin_top = 192.0
margin_right = 169.0
margin_bottom = 237.0
custom_styles/normal = SubResource( 1 )
text = "3"

[node name="Button4" type="Button" parent="."]
anchor_right = 0.11
margin_left = -68.0
margin_top = 549.0
margin_right = 371.0
margin_bottom = 949.0
rect_scale = Vector2( 0.184632, 0.182538 )
rect_pivot_offset = Vector2( 100, 0 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 5 )
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Container" type="Container" parent="."]
margin_right = 361.0
margin_bottom = 38.0

[node name="ColorRect2" type="ColorRect" parent="Container"]
margin_right = 361.0
margin_bottom = 37.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="Container"]
margin_left = 251.0
margin_top = 7.0
margin_right = 346.0
margin_bottom = 30.0
color = Color( 0.247059, 0.247059, 0.247059, 1 )

[node name="ColorRect4" type="ColorRect" parent="Container"]
margin_left = 256.0
margin_top = 11.0
margin_right = 269.0
margin_bottom = 26.0
color = Color( 0.101961, 0.901961, 0.0352941, 1 )

[node name="score" type="Label" parent="Container"]
margin_left = 275.0
margin_top = 12.0
margin_right = 315.0
margin_bottom = 26.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0 pts"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
